correction align text to buttons inside ls-board-info

--- a/source/assets/stylesheets/locastyle/modules/_board-info.sass
+++ b/source/assets/stylesheets/locastyle/modules/_board-info.sass
@@ -42,6 +42,7 @@
 
   [class*="ls-btn"]
     margin-bottom: 10px
+    text-align: center
     width: 100%
 
     ~ .ls-dropdown,
@@ -58,6 +59,7 @@
 
     [class*="ls-btn"]
       margin-bottom: 0
+      text-align: left
       width: auto
 
       ~ .ls-dropdown,
