--- a/source/assets/stylesheets/locastyle/modules/_buttons.sass
+++ b/source/assets/stylesheets/locastyle/modules/_buttons.sass
@@ -27,7 +27,6 @@
   + .ls-dropdown,
   + [class*="ls-btn"]
     margin-left: 5px
-    text-align: left
 
 .ls-btn-block
   display: block
